--- a/app/views/demands/show.html.erb
+++ b/app/views/demands/show.html.erb
@@ -6,7 +6,7 @@
 <br>
 <%="identifiant du produit demandé #{@demand.product_id}"%>
 <br>
-<%="identifiant du client ayant fait la demande #{@demand.client_id}"%>
+<%="identifiant du client ayant fait la demande #{@demand.client.first_name}"%>
 <br>
 <%="prix proposé pour la demande #{@demand.proposed_price}"%>
 <br>
