functionnal view per category, miss routes

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,13 @@
-<h1>gnome</h1>
-<% @category_product.each do |product| %>
-  <%= product.name %>
-<% end %>
+<div class="container">
+  <h1><%= @category.name %></h1>
+
+  <div class="cards">
+  <% @category_product.each do |product| %>
+    <div class="card">
+    <h3><%= product.name %></h3>
+    <p><%= product.description %></p>
+    <span><%= product.file3d %></span>
+    </div>
+  <% end %>
+  </div>
+</div>
