--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,11 @@
-<div class="wrapper">
+<div class="product-container">
   <h1>Products</h1>
 
   <% @products.each do |product| %>
-    <%= product.name %>
-    <%= product.description %>
-    <%= product.file3d %>
+    <p>
+      <%= product.name %>
+      <%= product.description %><% product.file3d %>
+      <i class="fa-solid fa-cubes"></i>
+    </p>
   <% end %>
 </div>
