offer contr & front

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,7 @@
 
 // Your CSS partials
 @import "components/index";
+@import "components/button_blue";
+@import "components/card_offer";
+@import "components/input";
 @import "pages/index";
