profil in progress

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,15 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Print3D colors :
+$dark-blue: #070D59;
+$body-printer: #1F3C88;
+$blue: #5893D4;
+$light-blue: #CEDDEF;
+$user-bg: #DBEEFF;
