put the navbar only on the homepage

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,7 @@
+<div class="nav-client">
+  <%= link_to image_tag(("print3d.PNG"), :class => "img-logo"), root_path %>
+</div>
+
 <div class="product-container">
   <h1>Products</h1>
 
