add blue navabar for demand#index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,3 +7,14 @@
 .img-logo {
   height: 7vh;
 }
+
+
+.img-logo-printer {
+  background-color: #070d59;
+}
+
+.nav-client-printer {
+  background-color: #070d59;
+  vertical-align: middle;
+  text-align: center;
+}
