add a ternary to have the good colors on bakcground if you're on the client side or the printer side

--- a/app/assets/stylesheets/config/_general.scss
+++ b/app/assets/stylesheets/config/_general.scss
@@ -1,5 +1,11 @@
 body {
-  height: 100vh;
+  min-height: 100vh;
+  &.background-blue {
+    background-color: $dark-blue;
+   }
+  &.background-white {
+  background-color: white;
+  }
 }
 
 // .container {
