--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,13 @@
 
   </head>
 
-  <body>
+  <body class="<%= @bg_blue ? 'background-blue' : 'background-white' %>">
     <%= render 'shared/flashes' %>
 
     <%= yield %>
 
     <%= render 'shared/footer' %>
+    <% console %>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
 </html>
