--- a/app/assets/stylesheets/config/_general.scss
+++ b/app/assets/stylesheets/config/_general.scss
@@ -2,6 +2,7 @@ body {
   min-height: 100vh;
   &.background-blue {
     background-color: $dark-blue;
+    color: white;
    }
   &.background-white {
   background-color: white;
