--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,17 +1,21 @@
+<div class="nav-client-printer">
+  <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
+</div>
+
 <div class="wrapper">
-  <a href="#" class="notification">
+  <%# <a href="#" class="notification">
   <span class="badge">1</span>
-  </a>
+  </a> %>
 <%# <p><%= current_user.picture %>
   <div class="user-wrapper">
     <div class="img-wrapper">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh-J04gXCOsTHzwjH5Ay2IWfnWBzFfBlP0sg&usqp=CAU" alt="" class="img-user">
     </div>
-    <div class="username-block">
+    <div class="username-block text-black">
       <span><%= current_user.first_name.upcase %></span>
       <span><%= current_user.last_name.upcase %></span>
     </div>
-    <div class="buttons-wrapper">
+    <div class="buttons-wrapper text-black">
       <div class="demands-count">
         <p>Demands : <%= current_user.demands_as_client.count %></p>
       </div>
@@ -22,7 +26,7 @@
   </div>
 
   <h2>Your demands list :</h2>
-  <div class="demands-wrapper">
+  <div class="demands-wrapper text-black">
       <% current_user.demands_as_client.each do |demand| %>
       <div class="username">
         <p><%= current_user.first_name %></p>
@@ -34,10 +38,10 @@
   </div>
 
   <h2>Your pending offers :</h2>
-  <div class="offers-wrapper">
+  <div class="offers-wrapper text-black">
       <% current_user.offers_as_printer.each do |offer| %></p>
-      <p><%= @demand.client.first_name %></p>
-      <p><%= @demand.client.last_name %></p>
+      <p><%= offer.demand.client.first_name %></p>
+      <p><%= offer.demand.client.last_name %></p>
       <p><%= offer.price %></p>
       <p><%= offer.status %></p>
       <% end %>
