ajout de la route pour offers (demands/:id/offers), avec la view

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,10 @@
   <!-- Grid container -->
   <footer class="footer-print p-2 icons-nav">
       <!-- SearchBar -->
+        <a  href="/" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
+        <i class="iconify" data-icon="cil:search" style="color: #699bf7;" data-width="30" data-height="30"></i>
+        </a>
 
-        <span class="iconify" data-icon="cil:search" style="color: #699bf7;" data-width="30" data-height="30"></span>
 
 
       <!-- Chat -->
@@ -17,7 +19,7 @@
 
 
       <!-- Profile -->
-
-      <span class="iconify" data-icon="ic:outline-supervisor-account" style="color: #699bf7;" data-width="30" data-height="30"></span>
-
+      <a  href="/profile" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
+        <span class="iconify" data-icon="ic:outline-supervisor-account" style="color: #699bf7;" data-width="30" data-height="30"></span>
+      </a>
   </footer>
