--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -36,8 +36,8 @@
   <h2>Your pending offers :</h2>
   <div class="offers-wrapper">
       <% current_user.offers_as_printer.each do |offer| %></p>
-      <p><%= @demand.client.first_name %></p>
-      <p><%= @demand.client.last_name %></p>
+      <p><%= offer.demand.client.first_name %></p>
+      <p><%= offer.demand.client.last_name %></p>
       <p><%= offer.price %></p>
       <p><%= offer.status %></p>
       <% end %>
