changing profile color if printer or not // change footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,9 +2,10 @@
   bottom: 0;
   position: fixed;
   background-color: #ceddef;
-  border-radius: 4px;
+  border-radius: 8px;
   min-width: 100vw;
   display: flex;
+  padding: 5px 0px;
 }
 
 .icons-nav {
