--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
   <!-- Grid container -->
-  <footer class="footer-print p-2 icons-nav">
+  <footer class="footer-print icons-nav">
       <!-- SearchBar -->
         <a  href="/" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
         <i class="iconify" data-icon="cil:search" style="color: #699bf7;" data-width="30" data-height="30"></i>
