IndexView without pic

--- a/app/assets/stylesheets/config/_general.scss
+++ b/app/assets/stylesheets/config/_general.scss
@@ -9,6 +9,11 @@ body {
   }
 }
 
+.product-container {
+  padding: 10px 20px;
+  padding-bottom: 50px;
+}
+
 // .container {
 //   max-width: 100vw;
 // }
