--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,14 +3,41 @@
 </div>
 
 <div class="product-container">
-  <h1>Products</h1>
+  <h4> Recently Added On Print3D</h4>
 
-  <% @products.each do |product| %>
-    <p>
-      <%= product.name %>
-      <%= product.description %><% product.file3d %>
-      <br>
-      <%= link_to "See more", product_path(product), class:"product-index-links"%>
-    </p>
-  <% end %>
+  <div class="cards-products">
+    <% @products.each do |product| %>
+      <%= link_to product_path(product), class:"product-index-links", :action => 'go' do %>
+        <div class="card-product">
+          <%= image_tag "#{product.picture}", class: "img-card-product", alt: "Product Pic" %>
+          <div class="card-product-infos">
+            <h2><%= product.name %></h2>
+            <p><%= product.description %></p>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
 </div>
+
+
+<%# <div class="card">
+  <div class="notification-actions">
+    <a href="#">Edit <i class="fas fa-pencil-alt"></i></a>
+    <a href="#">Delete <i class="far fa-trash-alt"></i></a>
+  </div>
+</div>
+
+<div class="card-product">
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <div class="card-product-infos">
+    <h2>Product name</h2>
+    <p>Product description with <strong>relevant info</strong> only.</p>
+  </div>
+</div>
+
+  <img src='https://kitt.lewagon.com/placeholder/users/arthur-littm' class="avatar-large" />
+  <div class="notification-content">
+    <p><small>14th January</small></p>
+    <p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipisicing elit.</p>
+  </div> %>
