--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -5,6 +5,12 @@
 
 <h1>Demands index / home page</h1>
 
+<div style="width: 100%; height: 600px;"
+  data-controller="mapbox"
+  data-mapbox-markers-value="<%= @demands_markers.to_json %>"
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
+
 <div class="cards">
   <% @demands.each do |demand| %>
     <div class="card">
