--- a/app/assets/stylesheets/components/_button_blue.scss
+++ b/app/assets/stylesheets/components/_button_blue.scss
@@ -12,5 +12,11 @@
   background-image: linear-gradient(180deg,#699bf7,#2c66d3);
   box-shadow: 0 4px 11px 0 rgba(37,44,97,0.5), 0 1px 3px 0 rgba(37,44,97,0.5);
   transition: all .2s ease-out;
+  text-decoration: none;
 
+}
+.btnMakeOffer {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
 }
