--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -2,18 +2,22 @@
   <div class="nav-client-printer">
     <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
   </div>
-
-  <h1>Demands index / home page</h1>
-
-  <div class="cards">
+  <h2>Demands list :</h2>
+  <div class="cards container">
     <% @demands.each do |demand| %>
-      <div class="card">
-        <%="Client name:  #{demand.client.first_name}" %>
-        <%= "Product #{demand.product.name}" %>
-        <%= "Comment: #{demand.comment}" %>
-        <%= "Offered price #{demand.proposed_price}" %>
-        <%= "Demand id: #{demand.id}" %>
-      </div>
+      <%= link_to demand_path(demand), :action => 'go' do %>
+        <div class="card_index_demand">
+            <%= image_tag"dyson.png"%>
+            <div class="card_index_infos">
+              <h3><%="#{demand.product.name}" %></h3>
+              <p><%="by:  #{demand.client.first_name}" %></p>
+              <p><%="#{demand.comment}" %></p>
+            </div>
+            <div class="card_index_price">
+              <%= "#{demand.proposed_price}€" %>
+            </div>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
