--- a/app/assets/stylesheets/components/_cards_products.scss
+++ b/app/assets/stylesheets/components/_cards_products.scss
@@ -1,3 +1,5 @@
+// Products#Index
+
 .product-index-links {
   text-decoration: none;
   color: black;
@@ -8,6 +10,10 @@
 //   color: black;
 // }
 
+.product-container {
+  padding: 10px 20px;
+}
+
 .card-product {
   overflow: hidden;
   height: 120px;
@@ -16,6 +22,7 @@
   display: flex;
   align-items: center;
   margin: 15px 0px;
+  border-radius: 4px;
 }
 
 .card-product img {
@@ -40,4 +47,51 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+}
+
+// Product#Show
+
+.card-show {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 0 0 4px 4px;
+}
+
+.img-card-show {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-show h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-show p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+
+.card-show .card-show-infos {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
+
+.card-show-infos .card-show-user {
+  position: absolute;
+  right: 16px;
+  top: -20px;
+  width: 40px;
+}
+
+.call-to-action {
+  text-align: center;
 }
