--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -6,10 +6,13 @@
 <% end %>
 
 <div class="wrapper">
-<%# <p><%= current_user.picture %>
   <div class="user-wrapper">
     <div class="img-wrapper">
+    <%# if current_user.picture %>
+      <%#= image_tag"#{current_user.picture}", :class => "img-user", alt: "Profile Picture"  %>
+    <%# else %>
       <%= image_tag"profile-pic.jpg", :class => "img-user", alt: "Profile Picture" %>
+    <%# end %>
     </div>
     <div class="username-block text-black">
       <span><%= current_user.first_name.upcase %></span>
