Mapbox fonctionne pour /demands

--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -5,7 +5,7 @@
 
 <h1>Demands index / home page</h1>
 
-<div style="width: 100%; height: 600px;"
+<div style="width: 100%; height: 40vh;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @demands_markers.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
