--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,9 +8,9 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-// @import "mapbox-gl/dist/mapbox-gl";
+@import 'mapbox-gl/dist/mapbox-gl.css';
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/profile"
+@import "components/profile";
