--- a/app/views/demands/show.html.erb
+++ b/app/views/demands/show.html.erb
@@ -1,6 +1,6 @@
 <br>
 <h1>Show demand</h1>
-<div class="card_offer">
+<div class="card-offer">
 
   <p class="text-center mt-4">
   <%=image_tag"dyson.png", height: 216, width: 296, crop: :fill %>
