--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,10 +1,7 @@
 <h5 class="text-center mt-4">You are about to make an offer for :</h5>
 
 
-<div class="card_offer">
-  <%# <div>
-    <img src= "<%=@demand.product.file3d" > %>
-  <%# </div> %>
+<div class="card-offer">
 
   <p class="text-center mt-4">
   <%=image_tag"dyson.png", height: 216, width: 296, crop: :fill %>
