--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -1,25 +1,26 @@
-<%# <div class="container"> %>
-<div class="nav-client-printer">
-  <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
-</div>
+<div class="container">
+  <div class="nav-client-printer">
+    <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
+  </div>
 
 <h1>Demands index / home page</h1>
-
-<div style="width: 100%; height: 40vh;"
-  data-controller="mapbox"
-  data-mapbox-markers-value="<%= @demands_markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-</div>
-
-<div class="cards">
-  <% @demands.each do |demand| %>
-    <div class="card">
-      <%="Cient name:  #{demand.client.first_name}" %>
-      <%= "Product #{demand.product.name}" %>
-      <%= "Comment: #{demand.comment}" %>
-      <%= "Offered price #{demand.proposed_price}" %>
-      <%= "Demand id: #{demand.id}" %>
+  <div class="map-card">
+    <div style="width: 100%; height: 40vh;"
+      data-controller="mapbox"
+      data-mapbox-markers-value="<%= @demands_markers.to_json %>"
+      data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
-  <% end %>
-</div>
+  </div>
+
+  <div class="cards">
+    <% @demands.each do |demand| %>
+      <div class="card">
+        <%="Cient name:  #{demand.client.first_name}" %>
+        <%= "Product #{demand.product.name}" %>
+        <%= "Comment: #{demand.comment}" %>
+        <%= "Offered price #{demand.proposed_price}" %>
+        <%= "Demand id: #{demand.id}" %>
+      </div>
+    <% end %>
+  </div>
 </div>
