fix navbar profile and footer sticky

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,3 +1,7 @@
+<div class="nav-client-printer">
+  <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
+</div>
+
 <div class="wrapper">
   <div class="user-wrapper">
     <div class="img-wrapper">
