--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -2,9 +2,8 @@
   <div class="nav-client-printer">
     <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
   </div>
-<<<<<<< HEAD
 
-<h1>Demands index / home page</h1>
+<h1>Browse demands around you</h1>
   <div class="map-card">
     <div style="width: 100%; height: 40vh;"
       data-controller="mapbox"
@@ -14,7 +13,7 @@
   </div>
 
 
-  <h2>Demands list :</h2>
+  <h2>Demands</h2>
   <div class="cards-demand container">
     <% @demands.each do |demand| %>
       <%= link_to demand_path(demand), :action => 'go' do %>
