check the changed files

--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,3 +1,8 @@
+<div class="nav-client-printer">
+  <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
+</div>
+
+
 <h5 class="text-center mt-4">You are about to make an offer for :</h5>
 
 
@@ -17,3 +22,5 @@
 <br>
 <br>
 <%= render "form", offer:  @offer, demand: @demand %>
+<br>
+<br>
