--- a/app/views/demands/show.html.erb
+++ b/app/views/demands/show.html.erb
@@ -1,3 +1,6 @@
+<div class="nav-client-printer">
+  <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
+</div>
 <br>
 <h1>Show demand</h1>
 <div class="card-offer">
