mapbox design, pins, reste à a remplir fenêtres

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   position: fixed;
   // position: sticky;
   background-color: #ceddef;
-  border-radius: 8px;
+  border-radius: 4px 4px 0px 0px;
   min-width: 100vw;
   display: flex;
   padding: 5px 0px;
