mapbox info window

--- a/app/views/demands/_info_window.html.erb
+++ b/app/views/demands/_info_window.html.erb
@@ -1,2 +1,4 @@
-<h2><%= user_demand.first_name %></h2>
-<p><%= user_demand.address %></p>
+<div class="window-container">
+  <h2><%= user_demand.first_name %></h2>
+  <p><%= user_demand.address %></p>
+</div>
