--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -5,7 +5,7 @@
 .user-wrapper {
   border: 2px solid $blue;
   border-radius: 12px;
-  background-color: #FFFFFF;
+  background-color: #CEDDEF;
   display: flex;
   flex-direction: column;
   align-items: center;
