--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,8 @@
-<div class="nav-client-printer">
-  <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
-</div>
+<% if user_signed_in? && current_user.printer %>
+  <%= render 'shared/navbar2' %>
+<% else %>
+  <%= render 'shared/navbar1' %>
+<% end %>
 
 <div class="wrapper">
   <div class="user-wrapper">
