--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -4,12 +4,25 @@
   line-height: 1.5;
   padding: 5px 10px;
   transition: box-shadow 100ms ease-in, border 100ms ease-in, background-color 100ms ease-in;
-  border: 2px solid #90c5f4;
-  color: rgb(14, 14, 16);
+  border: 1px solid #90c5f4;
+  color: rgb(5, 5, 92);
   background: #dbeeff;
   display: block;
   height: 36px;
+  box-shadow: 0 4px 11px 0 rgba(49, 55, 98, 0.5);
+}
 
-
-
+.input-search {
+  font-size: 14px;
+  border-radius: 6px;
+  line-height: 1.5;
+  padding: 5px 10px;
+  transition: box-shadow 100ms ease-in, border 100ms ease-in, background-color 100ms ease-in;
+  border: 1px solid #90c5f4;
+  color: rgb(5, 5, 92);
+  background: #ceddef;
+  opacity: 0.5;
+  display: block;
+  height: 36px;
+  box-shadow: 0 4px 11px 0 rgba(49, 55, 98, 0.5);
 }
