Add Roboto Font

--- a/app/assets/stylesheets/config/_general.scss
+++ b/app/assets/stylesheets/config/_general.scss
@@ -1,5 +1,6 @@
 body {
   min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
   &.background-blue {
     background-color: $dark-blue;
     color: white;
@@ -8,6 +9,7 @@ body {
   background-color: white;
   }
 }
+
 
 // .container {
 //   max-width: 100vw;
