search bar modified

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,9 +4,9 @@
 @import "form_legend_clear";
 @import "footer";
 @import "navbar";
-@import "button_blue";
 @import "cards_demand";
-@import "input";
+@import "search_bar";
 @import "cards_products";
 @import "map";
-@import "info_window"
+@import "info_window";
+@import "_profile";
