--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
   <%= link_to image_tag(("print3d.PNG"), :class => "img-logo"), root_path %>
 </div>
 
-<div class="p-4">
+<div class="search-bar">
   <form class="d-flex" action="/products" accept-charset="UTF-8" method="get" style="width:100%">
     <input type="text" name="query" id="query" value="" class="input-search" style="width:100%" placeholder="Find a product">
     <button type="submit" name="commit" class="loupe" data-disable-with="Search">
