--- a/app/assets/stylesheets/config/_general.scss
+++ b/app/assets/stylesheets/config/_general.scss
@@ -1,6 +1,6 @@
 body {
   min-height: 100vh;
-  // font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   &.background-blue {
     background-color: $dark-blue;
     color: white;
