--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -20,7 +20,6 @@
   border: 1px solid $blue;
   border-radius: 4px;
   margin-bottom: 8px;
-  padding-top: 12px;
   height: 130px;
   overflow: hidden;
 }
@@ -56,7 +55,7 @@
   height: 100%;
   width: 150px;
   object-fit: cover;
-  padding-bottom: 8px;
+  padding: 8px 0;
 }
 
 .offer-card img {
