ajout page custom users avec mapbox

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,9 +14,9 @@
 
 
       <!-- Home -->
-
+      <a  href="/users" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
         <span class="iconify" data-icon="gis:cube-3d" style="color: #699bf7;" data-width="30" data-height="30"></span>
-
+      </a>
 
       <!-- Profile -->
       <a  href="/profile" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
