--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -50,6 +50,7 @@
 
 .create {
   display: inline-block;
+  margin-top: 4px;
   outline: 0;
   border: 0;
   cursor: pointer;
@@ -58,9 +59,9 @@
   font-size: 14px;
   height: 38px;
   padding: 8px 24px;
-  border-radius: 50px;
-  background-image: linear-gradient(180deg,#699bf7,#2c66d3);
-  box-shadow: 0 4px 11px 0 rgba(37,44,97,0.5), 0 1px 3px 0 rgba(37,44,97,0.5);
+  border-radius: 6px;
+  background: linear-gradient(rgb(118, 152, 197) 0%, rgb(68, 103, 167) 35%, rgb(7, 77, 152) 100%);
+  box-shadow: 0 2px 6px 0 rgba(49,55,98,0.5), 0 1px 3px 0 rgba(49,55,98,0.5);
   transition: all .2s ease-out;
   text-decoration: none;
 }
