mapbox de users ajoutée, reste à mettre des pins corrects et à faire fonctionne les boutons (éventuellement)

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -19,3 +19,14 @@
   text-align: center;
   font-family: "Open Sans", sans-serif;
 }
+
+.marker-nico {
+  background-image: url('mapbox-icon.png');
+  color: red;
+  background-color: red;
+  background-size: cover;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  cursor: pointer;
+}
