--- a/app/views/demands/_info_window.html.erb
+++ b/app/views/demands/_info_window.html.erb
@@ -1,5 +1,5 @@
 <div class="window-container">
   <h2><%= user_demand.first_name %></h2>
   <p><%= user_demand.address %></p>
-  <p><%=user_demand.printer ? "I'm a printer :sunglasses:" : "I'm here to get items printed"  %> </p>
+  <p><%=user_demand.printer ? "I'm a printer 😎" : "I want YOU to print my items 💪"  %> </p>
 </div>
