--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -13,3 +13,15 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.active {
+  color: red;
+}
+
+.tabs:active {
+  color: red;
+}
+
+.tabs {
+  color: #699bf7;
+}
