--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,25 +1,25 @@
-  <!-- Grid container -->
-  <footer class="footer-print icons-nav">
-      <!-- SearchBar -->
-        <a  href="/" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
-        <i class="iconify" data-icon="cil:search" style="color: #699bf7;" data-width="30" data-height="30"></i>
-        </a>
+<!-- Grid container -->
+<footer class="footer-print icons-nav">
+  <!-- SearchBar -->
+    <a  href="/" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
+      <i class="iconify" data-icon="cil:search" style="color: #699bf7;" data-width="30" data-height="30"></i>
+    </a>
 
 
 
-      <!-- Chat -->
-
-        <span class="iconify" data-icon="octicon:feed-discussion-16" style="color: #699bf7;" data-width="30" data-height="30"></span>
-
-
-
-      <!-- Home -->
-
-        <span class="iconify" data-icon="gis:cube-3d" style="color: #699bf7;" data-width="30" data-height="30"></span>
+  <!-- Chat -->
+    <a  href="/chat" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
+      <i class="iconify" data-icon="octicon:feed-discussion-16" style="color: #699bf7;" data-width="30" data-height="30"></i>
+    </a>
 
 
-      <!-- Profile -->
-      <a  href="/profile" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
-        <span class="iconify" data-icon="ic:outline-supervisor-account" style="color: #699bf7;" data-width="30" data-height="30"></span>
-      </a>
-  </footer>
+  <!-- Map -->
+  <a  href="/" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
+    <i class="iconify" data-icon="gis:cube-3d" style="color: #699bf7;" data-width="30" data-height="30"></i>
+  </a>
+
+  <!-- Profile -->
+    <a  href="/profile" class="btn btn-primary social-btn" style="background-color: #ceddef; border:none">
+      <i class="iconify" data-icon="ic:outline-supervisor-account" style="color: #699bf7;" data-width="30" data-height="30"></i>
+    </a>
+</footer>
