--- a/app/views/pages/chat.html.erb
+++ b/app/views/pages/chat.html.erb
@@ -4,4 +4,23 @@
   <%= render 'shared/navbar1' %>
 <% end %>
 
+<br>
 
+<div class="wrapper">
+
+  <div class="chatbox">
+
+  </div>
+
+<br>
+
+  <div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Choose your pseudo..</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Printeur3Ddu24">
+  </div>
+  <div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label">Start to chat !</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+  <button type="button" class="btn btn-outline-dark">Send</button>
+</div>
