--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -26,6 +26,7 @@
   border-radius: 10px;
   background: linear-gradient(rgb(222, 231, 249) 0%, rgb(203, 214, 250) 35%, rgb(164, 186, 251) 100%);
   display: flex;
+  justify-content: space-between;
   border: 1px solid $blue;
   border-radius: 4px;
   margin-bottom: 8px;
@@ -38,17 +39,23 @@
   background: linear-gradient(rgb(118, 152, 197) 0%, rgb(68, 103, 167) 35%, rgb(7, 77, 152) 100%);
   box-shadow: 0 0 15px rgba(163, 189, 238, 0.2);
   display: flex;
+  justify-content: space-between;
   border: 1px solid $blue;
   border-radius: 4px;
-  padding-top: 12px;
   color: #FFFFFF;
   margin-bottom: 8px;
   height: 130px;
   overflow: hidden;
 }
+.img-dmd {
+  height: 100%;
+  width: 115px;
+  object-fit: cover;
+}
 
 .demand-infos {
   margin-right: 6px;
+  padding-top: 12px;
   padding-left: 2px;
   width: 52%;
   font-size: small;
@@ -56,6 +63,7 @@
 
 .offer-infos {
   margin-right: 6px;
+  padding-top: 12px;
   padding-left: 2px;
   width: 52%;
   font-size: small;
@@ -64,15 +72,15 @@
 .demand-card img {
   height: 100%;
   width: 150px;
+  border-radius: 5px;
   object-fit: cover;
-  padding: 8px 0;
 }
 
 .offer-card img {
   height: 100%;
   width: 150px;
+  border-radius: 5px;
   object-fit: cover;
-  padding-bottom: 8px;
 }
 
 .offers-wrapper {
