--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -46,7 +46,7 @@
               <p><strong>Price : </strong><%= demand.proposed_price %> €</p>
               <p><strong>Date de publication :</strong><%=demand.publication_date.to_i%></p>
             </div>
-            <img src="https://cdn.thingiverse.com/renders/d3/bb/87/6f/da/9456539fa8191e7e71a01dd18c2afe4d_preview_card.jpg" alt="">
+            <%= cl_image_tag demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
           </div>
         <% end %>
       <% end %>
@@ -57,7 +57,7 @@
       <% current_user.offers_as_printer.each do |offer| %></p>
           <div class="offer-card">
           <div class="offer-infos">
-          <p><strong>Name : </strong><%= offer.demand.client.first_name %><%= offer.demand.client.last_name %></p>
+          <p><strong>Name : </strong><%= offer.demand.client.first_name %> <%= offer.demand.client.last_name %></p>
           <p><strong>Price : </strong><%= offer.price %> €</p>
             <% if offer.status == 1 %>
               <p><strong>Status :</strong> Pending</p>
@@ -67,9 +67,9 @@
               <p><strong>Status :</strong> Rejected</p>
             <% end %>
           </div>
-        <img src="https://cdn.thingiverse.com/renders/d3/bb/87/6f/da/9456539fa8191e7e71a01dd18c2afe4d_preview_card.jpg" alt="">
+          <%= cl_image_tag offer.demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
           </div>
-        <% end %>
+      <% end %>
   </div>
   <%# <h2>Your offers accepted by Users :</h2> %>
 </div>
