--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -18,7 +18,7 @@
       <span><%= current_user.first_name.upcase %></span>
       <span><%= current_user.last_name.upcase %></span>
     <div class="user-infos">
-      <span> Specialty : video </span>
+      <span> <%= current_user.bio %> </span>
     </div>
     </div>
     <div class="buttons-wrapper">
@@ -32,7 +32,7 @@
   </div>
 
   <div class="edit-user">
-    <%= link_to "Edit your Password", edit_user_registration_path, class: "create" %>
+    <%= link_to "Edit profile", edit_user_registration_path, class: "create" %>
     <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "create" %>
   </div>
 
@@ -42,9 +42,9 @@
         <%= link_to demand_path(demand), :action => 'go' do %>
           <div class="demand-card">
             <div class="demand-infos">
-              <p><strong>Name : </strong><%= current_user.first_name %> <%= current_user.last_name %></p>
-              <p><strong>Price : </strong><%= demand.proposed_price %> €</p>
-              <p><strong>Date de publication :</strong><%=demand.publication_date.to_i%></p>
+              <p><strong>Client : </strong><%= current_user.first_name %> <%= current_user.last_name %></p>
+              <p><strong>Price offered : </strong><%= demand.proposed_price %> €</p>
+              <p><strong>Publication date : </strong><%=demand.created_at.to_time.strftime('%B %e at %l:%M')%></p>
             </div>
             <%= cl_image_tag demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
           </div>
@@ -52,7 +52,7 @@
       <% end %>
   </div>
 
-  <h2>You have <%= current_user.offers_as_printer.count %> offer<%=(current_user.offers_as_printer.count <= 1 ? '' : 's')%> :</h2>
+  <h2>Your <%= current_user.offers_as_printer.count <= 1 ? '' : current_user.offers_as_printer.count %> last offer<%=(current_user.offers_as_printer.count <= 1 ? '' : 's')%> :</h2>
   <div class="offers-wrapper">
       <% current_user.offers_as_printer.each do |offer| %></p>
           <div class="offer-card">
