--- a/app/views/pages/chat.html.erb
+++ b/app/views/pages/chat.html.erb
@@ -9,14 +9,36 @@
 <div class="wrapper">
 
   <div class="chatbox">
+    <div class="wrapper">
 
+      <div class="chatter1">
+        <h6>Dylanedu13 :</h6>
+        <span>Woaw !!! Trop bien print3d</span>
+      </div>
+
+      <div class="chatter2">
+        <h6>Jean-Jean :</h6>
+        <span>Hé ouais mec ! j'ai fait imprimé une miniature de voilier, je suis trop content ! C'est trop cool ahah</span>
+      </div>
+
+      <div class="chatter3">
+        <h6>LaureDinateur :</h6>
+        <span>Bonjour, je suis nouvelle sur print3d, vous savez si il y a un moyen d'éviter les frais de port ?</span>
+      </div>
+
+      <div class="chatter4">
+        <h6>FlorentLargent :</h6>
+        <span>Yes, il te suffit de le préciser dans ton comment quand tu fais une demande pour les imprimeurs.</span>
+      </div>
+
+    </div>
   </div>
 
 <br>
 
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Choose your pseudo..</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Printeur3Ddu24">
+
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Pseudo">
   </div>
   <div class="mb-3">
     <label for="exampleFormControlTextarea1" class="form-label">Start to chat !</label>
@@ -24,3 +46,6 @@
   </div>
   <button type="button" class="btn btn-outline-dark">Send</button>
 </div>
+<br>
+<br>
+<br>
