--- a/app/assets/stylesheets/components/_cards_demand.scss
+++ b/app/assets/stylesheets/components/_cards_demand.scss
@@ -4,6 +4,9 @@
   border-radius: 10px;
   box-shadow: 2px 2px 5px #90bbd2;
   background: #1f3c88;
+  .img-show {
+    border-radius: 10px;
+  }
 }
 
 .cards-demand {
