--- a/app/views/demands/show.html.erb
+++ b/app/views/demands/show.html.erb
@@ -2,12 +2,12 @@
   <%= link_to image_tag(("Printed.png"), :class => "img-logo-printer"), root_path %>
 </div>
 <br>
-<h1>Show demand</h1>
+<h5 class="text-center">Your demand :</h5>
 <div class="card-offer">
 
-  <p class="text-center mt-4">
-  <%=image_tag"dyson.png", height: 216, width: 296, crop: :fill %>
-  </p>
+  <div class="text-center mt-4">
+    <%= cl_image_tag @demand.product.photo.key, class: "img-show", alt: "Product Pic" %>
+  </div>
 
   <div class="mt-4">
     <h2><%= @demand.product.name %></h2>
