change the demand-offer part of profile page

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -166,5 +166,11 @@ a {
 }
 
 #btn-here {
-  margin-left: 37vw;
+  margin-left: 34vw;
+  margin-top: 10px;
+}
+
+.profile-demand-offer h3 {
+  margin-top: 10px;
+  text-decoration: underline;
 }
