--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -36,64 +36,61 @@
     <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "create" %>
   </div>
 
-<br>
- <h3>Your <%= current_user.demands_as_client.count <= 1 ? '' : current_user.demands_as_client.count %> last offer<%=(current_user.demands_as_client.count <= 1 ? '' : 's')%> :</h3>
-  
-  <br>
-  
-  <% if current_user.demands_as_client.count < 1 %>
-    <span> You don't have any demands to print yet. <br> Check the available products <br> <a href="/" style="text-decoration: none;" class="btn create" id="btn-here">here</a></span>
-  <% else %>
-    <span>You have <%= current_user.demands_as_client.count %> demand<%=(current_user.demands_as_client.count <= 1 ? '' : 's')%> :</span>
-    <div class="demands-wrapper">
-        <% current_user.demands_as_client.each do |demand| %>
-          <%= link_to demand_path(demand), :action => 'go' do %>
-            <div class="demand-card">
-              <div class="demand-infos">
-                <p><strong>Client : </strong><%= current_user.first_name %> <%= current_user.last_name %></p>
-                <p><strong>Price offered : </strong><%= demand.proposed_price %> €</p>
-                <p><strong>Publication date : </strong><%=demand.created_at.to_time.strftime('%B %e at %l:%M')%></p>
+  <div class="profile-demand-offer">
+    <h3 >Your <%= current_user.demands_as_client.count <= 1 ? '' : current_user.demands_as_client.count %> last demand<%=(current_user.demands_as_client.count <= 1 ? '' : 's')%> :</h3>
+
+    <% if current_user.demands_as_client.count < 1 %>
+      <span> You don't have any demands to print yet. <br> Check the available products <br> <a href="/" style="text-decoration: none;" class="btn create" id="btn-here">Products</a></span>
+    <% else %>
+      <span>You have <%= current_user.demands_as_client.count %> demand<%=(current_user.demands_as_client.count <= 1 ? '' : 's')%> :</span>
+      <div class="demands-wrapper">
+          <% current_user.demands_as_client.each do |demand| %>
+            <%= link_to demand_path(demand), :action => 'go' do %>
+              <div class="demand-card">
+                <div class="demand-infos">
+                  <p><strong>Client : </strong><%= current_user.first_name %> <%= current_user.last_name %></p>
+                  <p><strong>Price offered : </strong><%= demand.proposed_price %> €</p>
+                  <p><strong>Publication date : </strong><%=demand.created_at.to_time.strftime('%B %e at %l:%M')%></p>
+                </div>
+                <%= cl_image_tag demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
               </div>
-              <%= cl_image_tag demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
-            </div>
+            <% end %>
           <% end %>
+      </div>
+    <% end %>
+
+  <br>
+
+
+    <h3>Your <%= current_user.offers_as_printer.count <= 1 ? '' : current_user.offers_as_printer.count %> last offer<%=(current_user.offers_as_printer.count <= 1 ? '' : 's')%> :</h3>
+
+    <% if current_user.offers_as_printer.count < 1 && current_user.printer == false %>
+      <span> You don't have any offers <br> Become a printer !</span>
+    <% elsif current_user.offers_as_printer.count < 1 && current_user.printer == true %>
+      <span> You don't have any offers yet. <br> You want to make money ? <br> Go check all demands ! <br> <a href="/demands" style="text-decoration: none;" class="btn create" id="btn-here">Demands</a></span>
+    <% else %>
+    <span>You have <%= current_user.offers_as_printer.count %> offer<%=(current_user.offers_as_printer.count <= 1 ? '' : 's')%> :</span>
+    <div class="offers-wrapper">
+        <% current_user.offers_as_printer.each do |offer| %></p>
+            <div class="offer-card">
+            <div class="offer-infos">
+            <p><strong>Name : </strong><%= offer.demand.client.first_name %> <%= offer.demand.client.last_name %></p>
+            <p><strong>Price : </strong><%= offer.price %> €</p>
+              <% if offer.status == 1 %>
+                <p><strong>Status :</strong> Pending</p>
+              <% elsif offer.status == 2 %>
+                <p><strong>Status :</strong> Accepted</p>
+              <% else %>
+                <p><strong>Status :</strong> Rejected</p>
+              <% end %>
+            </div>
+            <%= cl_image_tag offer.demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
+            </div>
         <% end %>
     </div>
-  <% end %>
-
-<br><br>
-
-
-  <h3>Your <%= current_user.offers_as_printer.count <= 1 ? '' : current_user.offers_as_printer.count %> last offer<%=(current_user.offers_as_printer.count <= 1 ? '' : 's')%> :</h3>
-
-  <br>
-
-  <% if current_user.offers_as_printer.count < 1 && current_user.printer == false %>
-    <span> You don't have any offers <br> Become a printer !</span>
-  <% elsif current_user.offers_as_printer.count < 1 && current_user.printer == true %>
-    <span> You don't have any offers yet. <br> You want to make money ? <br> Go check all demands <br> <a href="/demands" style="text-decoration: none;" class="btn create" id="btn-here">here</a></span>
-  <% else %>
-  <span>You have <%= current_user.offers_as_printer.count %> offer<%=(current_user.offers_as_printer.count <= 1 ? '' : 's')%> :</span>
-  <div class="offers-wrapper">
-      <% current_user.offers_as_printer.each do |offer| %></p>
-          <div class="offer-card">
-          <div class="offer-infos">
-          <p><strong>Name : </strong><%= offer.demand.client.first_name %> <%= offer.demand.client.last_name %></p>
-          <p><strong>Price : </strong><%= offer.price %> €</p>
-            <% if offer.status == 1 %>
-              <p><strong>Status :</strong> Pending</p>
-            <% elsif offer.status == 2 %>
-              <p><strong>Status :</strong> Accepted</p>
-            <% else %>
-              <p><strong>Status :</strong> Rejected</p>
-            <% end %>
-          </div>
-          <%= cl_image_tag offer.demand.product.photo.key, class: "img-card-product", alt: "Product Pic" %>
-          </div>
-      <% end %>
-  </div>
-  <% end %>
+    <% end %>
   <%# <h2>Your offers accepted by Users :</h2> %>
+  </div>
 </div>
 <br>
 <br>
