--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -21,12 +21,26 @@
 }
 
 .marker-nico {
-  background-image: url('mapbox-icon.png');
+  background-image: url('apple-icon.png');
   color: red;
   background-color: red;
+  border: 1px solid blue;
   background-size: cover;
-  width: 25px;
-  height: 25px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.marker {
+
+  background-image: url('apple-icon.png');
+  color: blue;
+  background-color: blue;
+  border: 1px solid red;
+  background-size: cover;
+  width: 14px;
+  height: 14px;
   border-radius: 50%;
   cursor: pointer;
 }
